Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
 build-job:
     stage: build
     image: node:lts
+    tags: [docker]
     script:
         - npm install
         - npm run build
