--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,10 @@ build-job:
     script:
         - npm install
         - npm run build
+    artifacts:
+        paths:
+            - /node_modules
+            - /build
 
 test-job:
   stage: test
