Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,8 @@ build-job:
         - npm run build
     artifacts:
         paths:
-            - /node_modules
-            - /build
+            - ./node_modules
+            - ./build
 
 test-job:
   stage: test
