--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,8 @@ test-job:
 
 deploy_staging:
   stage: deploy
+  tags:
+    - docker-np
   before_script:
         - apt-get update -qq
         - apt-get install -qq git
