Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,9 +11,10 @@ build-job:
     script:
         - npm install
         - npm run build
+        - mv /build /public
     artifacts:
         paths:
-            - ./build
+            - ./public
 
 test-job:
   stage: test
