--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build-job:
     script:
         - npm install
         - npm run build
-        - mv /build /public
+        - mv ./build ./public
     artifacts:
         paths:
             - ./public
