Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ deploy_job:
   tags:
     - docker-np
   before_script:
-        - apt-get update -qq
-        - apt-get install -qq git
+        #- apt-get update -qq
+        #- apt-get install -qq git
         - 'which ssh-agent || ( apt-get install -qq openssh-client )'
         - eval $(ssh-agent -s)
         - ssh-add <(echo "$SSH_PRIVATE_KEY")
