--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,15 +3,13 @@ deploy_job:
   tags:
     - docker-np
   before_script:
-        #- apt-get update -qq
-        #- apt-get install -qq git
         - 'which ssh-agent || ( apt-get install -qq openssh-client )'
         - eval $(ssh-agent -s)
         - ssh-add <(echo "$SSH_PRIVATE_KEY")
         - mkdir -p ~/.ssh
         - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
   script:
-    - ssh fusion@158.160.102.242 "cd /home/fusion/project_np/front; git pull"
+    - ssh fusion@158.160.102.242 "cd /home/fusion/project_np/front; git status"
     #- ssh fusion@158.160.102.242 "git pull origin main"
   only:
     - main
