--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,8 @@ deploy_job:
     #- mkdir -p ~/.ssh
     #- chmod 700 ~/.ssh
     #( apt-get install -qq openssh-client )
-    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+    #- 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+    - 'command -v ssh-agent >/dev/null || ( apt-get update -y && apt-get install openssh-client -y )'
     - eval $(ssh-agent -s)
     - ssh-add <(echo "$SSH_PRIVATE_KEY")
     - mkdir -p ~/.ssh
