--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,8 @@ stages:
 
 deploy_job:
   stage: deploy
-  #tags:
-    #- docker_np
+  tags:
+    - docker_np
   before_script:
     #- 'command -v ssh-agent >/dev/null || ( apt-get update -y && apt-get install openssh-client -y )'
     #- eval $(ssh-agent -s)
